--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
     "bootstrap-scss": "^4.4.1",
+    "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
