--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-scss": "^4.4.1",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
